--- a/ConfigJenkins.html
+++ b/ConfigJenkins.html
@@ -47,7 +47,7 @@
 
 					<h2>Instalación</h2>
 
-					<table style="font-size: smaller;">
+					<table style="font-size: smaller; width: 100%;">
 						<thead>
 							<tr>
 								<td>Fedora</td>
