--- a/ConfigJenkins.html
+++ b/ConfigJenkins.html
@@ -74,7 +74,7 @@
 
 					<h2>Plugins utilizados</h2>
 
-					<table style="width: 100%;">
+					<table style="width: 100%; font-size: smaller;">
 							<tr>
 								<td>Git Plugin</td>
 								<td>Gitlab</td>
