--- a/ConfigJenkins.html
+++ b/ConfigJenkins.html
@@ -47,7 +47,7 @@
 
 					<h2>Instalación</h2>
 
-					<table style="font-size: smaller; width: 100%;">
+					<table  class="main" style="font-size: smaller; width: 100%;">
 							<tr>
 								<td>Fedora</td>
 								<td>Linux</td>
@@ -74,7 +74,7 @@
 
 					<h2>Plugins utilizados</h2>
 
-					<table style="width: 100%; font-size: smaller;">
+					<table  class="main" style="width: 100%; font-size: smaller;">
 							<tr>
 								<td>Git Plugin</td>
 								<td>Gitlab</td>
