--- a/ConfigJenkins.html
+++ b/ConfigJenkins.html
@@ -212,7 +212,7 @@
 							width: 100%;
 							max-width: 100%;
 							height: 100%;
-							font-size: medium;
+							font-size: smaller;
 						}
 
 						#pre .kw1,
