--- a/Sonarqube.html
+++ b/Sonarqube.html
@@ -20,7 +20,7 @@
 
 							<!-- Header -->
 								<header id="header">
-									<a href="index.html" class="logo"><strong>Configuracion Gitlab</strong></a>
+									<a href="index.html" class="logo"><strong>Sonarqube</strong></a>
 									<ul class="icons">
 										<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
 										<li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
@@ -33,10 +33,12 @@
 							<!-- Content -->
 								<section>
 									<header class="main">
-										<h1>Gitlab Config.</h1>
+										<table>
+											<tr>
+												<td align="center"><img src="images/DV-SonarQube.png" width="320px" height="auto" alt="" /></td>
+											</tr>
+										</table>
 									</header>
-
-									<span class="image main"><img src="images/50-git_gitlab.png" width="520px" height="auto" alt="" /></span>
 
 									<hr class="major" />
 
