--- a/ConfigNexus.html
+++ b/ConfigNexus.html
@@ -38,29 +38,29 @@
 							<tr>
 								<td align="center"><img src="images/son-logo-main-2x-2.png" height="100%" alt="" /></td>
 							</tr>
-						</table>	
+						</table>
 					</header>
 
 					<hr class="major" />
 
-					<h2>Instalacion y Configuracion.</h2>
+					<h2>Interfaz Sonatype Nexus 3.</h2>
 					<p></p>
 					<span class="image">
-						<img src="images/1490713855_686_GitLab-Jenkins-una-integración-de-gran-alcance.png" width="100%"
+						<img src="images/interfaz-nexus.PNG" width="100%"
 							height="auto" />
 					</span>
 
 					<hr class="major" />
 
-					<h2>Comencemos...</h2>
-					<p>Una vez estando dentro de nuestro espacio en gitlab, es necesario crear un access token con el
-						cual tendremos que habilitarlo en jenkins para la comunicacion entre uno y otro. Esto se
-						encuentra en las configuraciones de perfil donde se generara nuestro access token, como lo
-						muestra la siguiente imagen: </p>
+					<h2>Repositorios Disponibles</h2>
 
 					<span class="image">
-						<img src="images/1490713861_757_GitLab-Jenkins-una-integración-de-gran-alcance.png" width="100%"
-							height="auto" />
+						<img src="images/repos.PNG" width="100%" height="auto" />
+					</span>
+
+					<p><strong>Docker images repository</strong></p>
+					<span class="image">
+						<img src="images/repo-docker.PNG" width="100%" height="auto" />
 					</span>
 
 					<br />
